--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -71,7 +71,8 @@
     "\n",
     "* Why do we need non-linearieties?\n",
     "* Forward and backward as instances of dynamic programming.\n",
-    "* Differentiation is a linear approximation."
+    "* Differentiation is a linear approximation.\n",
+    "* Gradient checking."
    ]
   },
   {
@@ -213,7 +214,7 @@
     "collapsed": true
    },
    "source": [
-    "High level idea: Calculate partial derivatives with respect to each parameter in the network."
+    "High level idea: Calculate partial derivatives with respect to each parameter in the network. Again, this can be done inefficiently with duplication of effort as demonstrated below:"
    ]
   },
   {
