--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -77,7 +77,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "We'll start with a hypothetical (xkcd-style).\n",
     "\n",
@@ -143,16 +147,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Toy network\n",
     "\n",
-    "<img src=\"nn.jpg\">"
+    "<img src=\"nn.png\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Forward pass (predict)\n",
     "\n",
@@ -203,28 +215,80 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Backward pass (derivates)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "High level idea: Calculate partial derivatives with respect to each parameter in the network. Again, this can be done inefficiently with duplication of effort as demonstrated below:"
+    "**High level idea**: Calculate partial derivatives with respect to each parameter in the network."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### What is a derivative?\n",
+    "\n",
+    "A derivative gives us a linear approximation of the function at a specific point.\n",
+    "\n",
+    "So given a function $f$, its derivate at point $a$, $m = f'(a)$, we can approximate the original function as \n",
+    "\n",
+    "$$g(x) = f(a) + m(a - x)$$"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "This allows us to estimate the impact of a change in a parameter with respect to the final output of the network. It is especially useful if we make the network compute a **scalar loss** during training, i.e. have a $1 \\times 1$ output node that measures how much we **dislike** the current prediction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### All the partial derivates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "As before this can be done inefficiently with duplication of effort as demonstrated below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "$$\n",
     "\\begin{align}\n",
@@ -240,6 +304,28 @@
     "\\frac{\\partial f}{\\partial (x_1 \\to r_1)} = & x_1 \\frac{\\partial g_r}{\\partial (x_1 \\to r_1)} \\Bigg( \\color{blue}{\\Big( \\frac{\\partial f}{\\partial (s_0 \\to y)} + r_1 \\frac{\\partial g_s}{\\partial (r_1 \\to s_0)} \\Big)} + \\color{blue}{\\Big( \\frac{\\partial f}{\\partial (s_1 \\to y)} + r_1 \\frac{\\partial g_s}{\\partial (r_1 \\to s_1)} \\Big)} \\Bigg)\\\\\n",
     "\\end{align}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Path derivates\n",
+    "\n",
+    "Intuitively, a parameter node influences the loss node through all of the paths between the two nodes. \n",
+    "\n",
+    "Using the chain rule , we can come up with an expression for a **path derivate** using only local partial derivates. \n",
+    "\n",
+    "<img src=\"nn.png\">\n",
+    "\n",
+    "The derivate of a parameter with respect to the loss is **the sum of all path derivates**.\n",
+    "\n",
+    "Paths get reused, which is the cause of the inefficiency. It is also marks the road to the backpropagation algorithm, which boils down to intelligent caching of sums of partial derivates. "
    ]
   },
   {
